--- a/price.htm
+++ b/price.htm
@@ -12,9 +12,11 @@
 --></style>
 </head>
 <body>
-<table>
-<tr id='1'><td>3,300원</td><td>4,400원</td><td>6,600원</td><td>8,800원</td><td>9,350원</td><td>9,680원</td><td>9,900원</td></tr>
-<tr id='2'><td>4,400원</td><td>5,500원</td><td>7,700원</td><td>9,900원</td><td>10,450원</td><td>10,780원</td><td>11,000원</td></tr>
+<table id='1'>
+<tr><td>3,300원</td><td>4,400원</td><td>6,600원</td><td>8,800원</td><td>9,350원</td><td>9,680원</td><td>9,900원</td></tr>
+</table>
+<table id='2'>
+<tr><td>4,400원</td><td>5,500원</td><td>7,700원</td><td>9,900원</td><td>10,450원</td><td>10,780원</td><td>11,000원</td></tr>
 </table>
 </body>
 </html>
