--- a/ac.htm
+++ b/ac.htm
@@ -13,8 +13,8 @@
 </head>
 <body>
 <table id='ad'><tr><td>카카오뱅크 3333-13-8045107 (정연미)</td></tr></table>
-<table id='ac'><tr><td>농협 481114-52-080319 (정광해)</td></tr></table>
-<table id='ab'><tr><td>8월 13~14일 휴무</td></tr></table>
+<table id='ab'><tr><td>농협 481114-52-080319 (정광해)</td></tr></table>
+<table id='ac'><tr><td>9월 23~24일 휴무</td></tr></table>
 
 </body>
 </html>
