--- a/ac.htm
+++ b/ac.htm
@@ -12,8 +12,8 @@
 --></style>
 </head>
 <body>
-<table id='ad'><tr><td>농협 356-1574-1066-13 (최우인)</td></tr></table>
-<table id='ac'><tr><td>농협 481114-52-080319 (정광해)</td></tr></table>
+<table id='ac'><tr><td>농협 356-1574-1066-13 (최우인)</td></tr></table>
+<table id='ad'><tr><td>농협 481114-52-080319 (정광해)</td></tr></table>
 <table id='ab'><tr><td>계좌결제 (서버 점검중 22일 오후 6시 이후 재개)</td></tr></table>
 <table id='ae'><tr><td>11월 6~9일 서버점검으로 계좌결제 불가</td></tr></table>
 
