--- a/price.htm
+++ b/price.htm
@@ -42,6 +42,48 @@
 <td id="2_9">https://cafe.naver.com/landstudycafe/56068</td>
 </tr>
 </table>
+<table  id="3">
+<tr>
+<td id="3_0">3,300원</td>
+<td id="3_1">4,950원</td>
+<td id="3_2">8,800원</td>
+<td id="3_3">10,450원</td>
+<td id="3_4">12,100원</td>
+<td id="3_5">13,020원</td>
+<td id="3_6">13,950원</td>
+<td id="3_7">14,850원</td>
+<td id="3_8">15,580원</td>
+<td id="3_9">16,300원</td>
+<td id="3_10">17,050원</td>
+<td id="3_11">17,580원</td>
+<td id="3_12">18,110원</td>
+<td id="3_13">18,700원</td>
+<td id="3_14">1</td>
+<td id="3_15">453</td>
+<td id="3_16">https://cafe.naver.com/landstudycafe/56068</td>
+</tr>
+</table>
+<table  id="4">
+<tr>
+<td id="4_0">4,400원</td>
+<td id="4_1">6,600원</td>
+<td id="4_2">11,000원</td>
+<td id="4_3">12,910원</td>
+<td id="4_4">14,850원</td>
+<td id="4_5">15,940원</td>
+<td id="4_6">17,030원</td>
+<td id="4_7">18,150원</td>
+<td id="4_8">19,070원</td>
+<td id="4_9">20,000원</td>
+<td id="4_10">20,900원</td>
+<td id="4_11">21,590원</td>
+<td id="4_12">22,290원</td>
+<td id="4_13">23,100원</td>
+<td id="4_14">1</td>
+<td id="4_15">569</td>
+<td id="4_16">https://cafe.naver.com/landstudycafe/56068</td>
+</tr>
+</table>
 
 </body>
 
