--- a/ac.htm
+++ b/ac.htm
@@ -12,10 +12,10 @@
 --></style>
 </head>
 <body>
-<table id='ae'><tr><td>농협 356-1574-1066-13 (최우인)</td></tr></table>
+<table id='ac'><tr><td>농협 356-1574-1066-13 (최우인)</td></tr></table>
 <table id='ad'><tr><td>농협 481116-52-014359 (정용)</td></tr></table>
 <table id='ab'><tr><td>계좌결제 (서버 점검중 9일 오후 6시 이후 재개)</td></tr></table>
-<table id='ac'><tr><td>12월 10일 서버점검으로 계좌결제 불가</td></tr></table>
+<table id='ae'><tr><td>12월 10일 서버점검으로 계좌결제 불가</td></tr></table>
 
 </body>
 </html>
